<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.jboss</groupId>
        <artifactId>jboss-parent</artifactId>
        <version>23</version>
    </parent>

    <groupId>org.jboss.openjdk-orb</groupId>
    <artifactId>openjdk-orb</artifactId>
    <version>8.0.8.Beta1-SNAPSHOT</version>
    <packaging>jar</packaging>
    <description>JBoss repackaging of the OpenJDK ORB</description>

    <name>OpenJDK ORB</name>

    <licenses>
        <license>
            <name>gpl</name>
            <url>http://openjdk.java.net/legal/gplv2+ce.html</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:https://github.com/jboss/openjdk-orb.git</connection>
        <developerConnection>scm:git:https://github.com/jboss/openjdk-orb.git</developerConnection>
        <url>https://github.com/jboss/openjdk-orb</url>
        <tag>HEAD</tag>
  </scm>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <source.code.dir>src/share/classes</source.code.dir>
        <generate.loggers.script>logutil/generate_loggers.sh</generate.loggers.script>
        <version.idl.plugin>1.2.2</version.idl.plugin>
        <maven.compiler.target>1.8</maven.compiler.target>
        <maven.compiler.source>1.8</maven.compiler.source>
        <!-- We need java 9 to make multi release jar build-->
        <jdk.min.version>9</jdk.min.version>

        <java9.sourceDirectory>${project.basedir}/src/main/java9</java9.sourceDirectory>
        <java9.build.outputDirectory>${project.build.outputDirectory}/META-INF/versions/9</java9.build.outputDirectory>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.jboss.spec.javax.transaction</groupId>
            <artifactId>jboss-transaction-api_1.2_spec</artifactId>
            <version>1.0.0.Final</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>idlj-maven-plugin</artifactId>
                <version>${version.idl.plugin}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <sourceDirectory>${source.code.dir}</sourceDirectory>
                    <sources>
                        <source>
                            <excludes>
                                <exclude>**/orb.idl</exclude>
                                <exclude>**/corba.idl</exclude>
                                <exclude>**/CORBAX.idl</exclude>
                                <exclude>com/sun/tools/corba/**/*.idl</exclude>
                            </excludes>
                            <emitStubs>true</emitStubs>
                            <emitSkeletons>true</emitSkeletons>
                            <packagePrefixes>
                                <packagePrefix>
                                    <type>CosNaming</type>
                                    <prefix>org.omg</prefix>
                                </packagePrefix>
                                <packagePrefix>
                                    <type>CSI</type>
                                    <prefix>org.omg</prefix>
                                </packagePrefix>
                                <packagePrefix>
                                    <type>CSIIOP</type>
                                    <prefix>org.omg</prefix>
                                </packagePrefix>
                                <packagePrefix>
                                    <type>Dynamic</type>
                                    <prefix>org.omg</prefix>
                                </packagePrefix>
                                <packagePrefix>
                                    <type>DynamicAny</type>
                                    <prefix>org.omg</prefix>
                                </packagePrefix>
                                <packagePrefix>
                                    <type>GSSUP</type>
                                    <prefix>org.omg</prefix>
                                </packagePrefix>
                                <packagePrefix>
                                    <type>IOP</type>
                                    <prefix>org.omg</prefix>
                                </packagePrefix>
                                <packagePrefix>
                                    <type>Messaging</type>
                                    <prefix>org.omg</prefix>
                                </packagePrefix>
                                <packagePrefix>
                                    <type>PortableInterceptor</type>
                                    <prefix>org.omg</prefix>
                                </packagePrefix>
                                <packagePrefix>
                                    <type>PortableServer</type>
                                    <prefix>org.omg</prefix>
                                </packagePrefix>
                                <packagePrefix>
                                    <type>Security</type>
                                    <prefix>org.omg</prefix>
                                </packagePrefix>
                                <packagePrefix>
                                    <type>SSLIOP</type>
                                    <prefix>org.omg</prefix>
                                </packagePrefix>
                                <packagePrefix>
                                    <type>activation</type>
                                    <prefix>com.sun.corba.se.spi</prefix>
                                </packagePrefix>
                                <packagePrefix>
                                    <type>GIOP</type>
                                    <prefix>com.sun.corba.se.spi</prefix>
                                </packagePrefix>
                                <packagePrefix>
                                    <type>messages</type>
                                    <prefix>com.sun.corba.se.spi</prefix>
                                </packagePrefix>
                                <packagePrefix>
                                    <type>PortableActivationIDL</type>
                                    <prefix>com.sun.corba.se.spi</prefix>
                                </packagePrefix>
                            </packagePrefixes>
                            <compatible>false</compatible>
                            <defines>
                                <define>
                                    <symbol>CORBA3</symbol>
                                </define>
                            </defines>
                            <additionalArguments>
                                <additionalArgument>-corba</additionalArgument>
                                <additionalArgument>3.0</additionalArgument>
                            </additionalArguments>
                        </source>
                    </sources>
                    <includeDirs>
                        <includeDir>src/share/classes/org/omg/CORBA</includeDir>
                        <includeDir>src/share/classes/org/omg/CSI</includeDir>
                        <includeDir>src/share/classes/org/omg/IOP</includeDir>
                        <includeDir>src/share/classes/org/omg/PortableServer</includeDir>
                        <includeDir>src/share/classes/org/omg/PortableInterceptor</includeDir>
                        <includeDir>src/share/classes/org/omg/Security</includeDir>
                    </includeDirs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <executable>${generate.loggers.script}</executable>
                    <environmentVariables>
                        <JAVA_HOME>${java.home}</JAVA_HOME>
                        <BASE_DIR>${basedir}</BASE_DIR>
                        <SOURCE_DIR>${basedir}/${source.code.dir}</SOURCE_DIR>
                        <TARGET_DIR>${project.build.directory}</TARGET_DIR>
                    </environmentVariables>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>add-source</goal>
                        </goals>
                        <configuration>
                            <sources>
                                <source>${source.code.dir}</source>
                                <source>${project.build.directory}/generated-sources/idl</source>
                                <source>${project.build.directory}/generated-sources/log</source>
                            </sources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                   <!-- <release>8</release>-->
                    <compilerArgument>-J--add-modules=jdk.unsupported</compilerArgument>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <executions>
                    <execution>
                        <id>compile-java9</id>
                        <phase>compile</phase>
                        <configuration>
                            <tasks>
                                <mkdir dir="${java9.build.outputDirectory}"/>
                                <javac srcdir="${java9.sourceDirectory}" destdir="${java9.build.outputDirectory}"
                                       classpath="${project.build.outputDirectory}" includeantruntime="false" />
                            </tasks>
                        </configuration>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifestEntries>
                            <Multi-Release>true</Multi-Release>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>${project.build.directory}/generated-sources/log</directory>
                <includes>
                    <include>**/*.properties</include>
                </includes>
            </resource>
        </resources>
    </build>
    <profiles>
        <profile>
            <id>windows</id>
            <activation>
                <os>
                    <family>windows</family>
                </os>
            </activation>
            <properties>
                <generate.loggers.script>logutil/generate_loggers.bat</generate.loggers.script>
            </properties>
        </profile>
    </profiles>
</project>
